vlib/v/checker/tests/fn_array_decompose_arg_mismatch_err_c.out
vlib/v/checker/tests/fn_array_decompose_arg_mismatch_err_c.vv:2:6: error: expected 0 arguments, but got 1
    1 | fn main() {
    2 |     foo(...args)
      |         ~~~~~~~
    3 | }
    4 |
